[package]
name = "dohproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.3", features= ["json"] }
serde = { version="1.0.99", features = ["derive"] }
serde_json = "1.0.99"
rustdns = "0.4.0"
uuid = { version = "1.4.0", features = ["v4"] }